k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-sheets-api-service
spec:
  selector:
    app: saas-sheets-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
